[package]
name = "honoko"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
